2002-11-10  Roland McGrath  <roland@redhat.com>

	* crypt/md5-crypt.c: Doc fix.

	* sysdeps/unix/make-syscalls.sh: Insert $(make-target-directory) at
	the beginning of generated target commands.

	* csu/Makefile ($(objpfx)crti.o, $(objpfx)crtn.o): Add explicit
	dependencies for these in case implicit rule search skipped the
	nonexistent source directory.
	* sysdeps/gnu/Makefile ($(objpfx)errlist.d): Give this rule all the
	files with $(object-suffixes) as targets too.
	* Makerules [no_deps && objpfx] (before-compile): Add $(objpfx).
	and a target for it using $(make-target-directory).

	* Rules (before-compile): Add $(common-objpfx)bits/stdio-lim.h.

2002-11-10  Roland McGrath  <roland@frob.com>

	* sysdeps/unix/sysv/linux/bits/pthreadtypes.h: Moved to ...
	* sysdeps/generic/bits/pthreadtypes.h: ... here.

	* sysdeps/mach/hurd/fcntl.c (__libc_fcntl): Treat a struct flock with
	l_start == 0 and l_len == 1 as we do l_len == 0.

2002-11-10  Ulrich Drepper  <drepper@redhat.com>

	* po/da.po: Update from translation team.

2002-11-10  Roland McGrath  <roland@redhat.com>

	* config.make.in (includedir): New variable, substituted by configure.
	Reported missing by Jocelyn Fournier <joc@presence-pc.com>.
	* Makeconfig (includedir): Use $(prefix), not $(exec_prefix).

2002-11-10  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/x86_64/sys/ucontext.h (enum): Add
	REG_OLDMASK and REG_CR2 to synch with kernel header.
	(NGREG): Increase.

	* nss/getXXent.c (GETFUNC_NAME): Use union type to avoid strict
	aliasing problem.
	* nss/getXXbyYY_r.c (INTERNAL): Likewise.
	* nss/getnssent_r.c (__nss_getent_r): Likewise.
	(__nss_setent): Likewise.
	(__nss_getent_r): Likewise.
	* inet/getnetgrent_r.c (innetgr): Likewise.
	(__internal_setnetgrent_reuse): Likewise.
	(internal_getnetgrent_r): Likewise.
	* inet/ether_hton.c (ether_hostton): Likewise.
	* inet/ether_ntoh.c (ether_ntohost): Likewise.
	* sunrpc/netname.c (netname2user): Likewise.